--- a/app/views/books/_index.html.erb
+++ b/app/views/books/_index.html.erb
@@ -16,6 +16,17 @@
         </td>
         <td><%= link_to book.title,book %></td>
         <td><%= book.body %></td>
+        <td><% if book.favorited_by?(current_user) %>
+        <%= link_to book_favorites_path(book),method: :delete,class:"heart-red" do %>
+        ♥<%= book.favorites.count %><% end %>
+        </p>
+        <% else %>
+        <%= link_to book_favorites_path(book), method: :post do%>
+        <p>
+        ♡<%= book.favorites.count %><% end %>
+        </p>
+        <% end %>
+        </td>
       </tr>
     <% end %>
   </tbody>
