--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -22,6 +22,17 @@
             <td><%= link_to 'Edit', edit_book_path(@book), class: "btn btn-sm btn-success" %></td>
             <td><%= link_to 'Destroy', @book, method: :delete, data: { confirm: '本当に消しますか？' }, class: "btn btn-sm btn-danger"%></td>
           <% end %>
+            <td><% if @book.favorited_by?(current_user) %>
+            <%= link_to book_favorites_path(@book),method: :delete,class:"heart-red" do %>
+            ♥<%= @book.favorites.count %><% end %>
+             </p>
+            <% else %>
+            <%= link_to book_favorites_path(@book), method: :post do%>
+             <p>
+            ♡<%= @book.favorites.count %><% end %>
+            </p>
+            <% end %>
+            </td>
         </tr>
       </table>
     </div>
