--- a/app/views/books/_index.html.erb
+++ b/app/views/books/_index.html.erb
@@ -27,6 +27,9 @@
         </p>
         <% end %>
         </td>
+        <td>
+          コメント数: <%= book.book_comments.count %>
+        </td>
       </tr>
     <% end %>
   </tbody>
