--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -33,8 +33,35 @@
             </p>
             <% end %>
             </td>
+            
+            <td>コメント数: <%= @book.book_comments.count %>
+            </td>
+            
         </tr>
       </table>
+      
+      <div>
+        <% @book.book_comments.each do |book_comment|%>
+        <%= image_tag book_comment.user.get_profile_image, size:'50x50'%>
+        <%= book_comment.comment %>
+        <% if book_comment.user == current_user %>
+        <%= link_to "Delete", book_book_comment_path(book_comment.book,book_comment), method: :delete, class: "btn btn-sm btn-danger" %>
+        <% end %>
+        <p>
+          <%= link_to user_path(book_comment.user_id) do %>
+          <%= book_comment.user.name %>
+          <% end %>
+        </p>
+        <% end %>
+      </div>
+      
+      <div>
+        <%= form_with model:[@book,@book_comment] do |f|%>
+        <%= f.text_area :comment,rows:'5' %>
+        <%= f.submit "送信"%>
+      　<% end %>
+      </div>
+    
     </div>
   </div>
 </div>
