--- a/app/views/relationships/followers.html.erb
+++ b/app/views/relationships/followers.html.erb
@@ -1,34 +1,32 @@
-<div class ="container px-5 px-sm-0">
- <div class ="table table-hover table-inverse">
  <h2>Follower Users</h2>
  <% if @followers.exists? %>
-  <table>
-    <thead>
-  <tr>
-  <th>image</th>
-  <th>name</th>
-  <th colspan="3"></th>
-  <th colspan="3"></th>
-  <th colspan="3"></th>
-  </tr>
-   </thead>
+  <%= render "/users/index", users: @followers%>
   
-    <tbody>
-      <% @followers.each do |follower|%>
-     <tr>
-    <td><%= image_tag follower.get_profile_image, size:'50x50' %></td>
-    <td><%= follower.name%></td>
-    <td>フォロー数: <%= follower.followings.count%></td>
-    <td>フォロワー数: <%= follower.followers.count%></td>
-    <td><%= link_to "show", user_path(follower.id)%>
-    </td>
-  </tr>
-    <% end %>
-  </tbody>
-</table>
+  <!--ここから下は不要-->
+  <!--<table>-->
+    <!--<thead>-->
+  <!--<tr>-->
+  <!--<th>image</th>-->
+  <!--<th>name</th>-->
+  <!--<th colspan="3"></th>-->
+  <!--<th colspan="3"></th>-->
+  <!--<th colspan="3"></th>-->
+  <!--</tr>-->
+   <!--</thead>-->
+  
+    <!--<tbody>-->
+      <%# @followers.each do |follower|%>
+     <!--<tr>-->
+    <!--<td><%#= image_tag follower.get_profile_image, size:'50x50' %></td>-->
+    <!--<td><%#= follower.name%></td>-->
+    <!--<td>フォロー数: <%#= follower.followings.count%></td>-->
+    <!--<td>フォロワー数: <%#= follower.followers.count%></td>-->
+    <!--<td><%#= link_to "show", user_path(follower.id)%>-->
+    <!--</td>-->
+  <!--</tr>-->
+    <%# end %>
+  <!--</tbody>-->
+<!--</table>-->
 <% else %>
 <p>ユーザーはいません</p>
 <% end %>
-
- </div> 
-</div>
