--- a/app/views/relationships/followings.html.erb
+++ b/app/views/relationships/followings.html.erb
@@ -2,30 +2,33 @@
  <div class ="table table-hover table-inverse">
    <h2>Follow Users</h2>
    <% if @followings.exists? %>
-  <table>
-    <thead>
-  <tr>
-  <th>image</th>
-  <th>name</th>
-  <th colspan="3"></th>
-  <th colspan="3"></th>
-  <th colspan="3"></th>
-  </tr>
-   </thead>
+    <%= render'/users/index', users: @followings %>
+   
+   <!--ここから下は不要-->
+  <!--<table>-->
+    <!--<thead>-->
+  <!--<tr>-->
+  <!--<th>image</th>-->
+  <!--<th>name</th>-->
+  <!--<th colspan="3"></th>-->
+  <!--<th colspan="3"></th>-->
+  <!--<th colspan="3"></th>-->
+  <!--</tr>-->
+   <!--</thead>-->
   
-    <tbody>
-      <% @followings.each do |following|%>
-     <tr>
-    <td><%= image_tag following.get_profile_image, size:'50x50' %></td>
-    <td><%= following.name%></td>
-    <td>フォロー数: <%= following.followings.count%></td>
-    <td>フォロワー数: <%= following.followers.count%></td>
-    <td><%= link_to "show", user_path(following.id)%>
-    </td>
-  </tr>
-    <% end %>
-  </tbody>
-</table>
+    <!--<tbody>-->
+      <!--<%# @followings.each do |following|%>-->
+     <!--<tr>-->
+    <!--<td><%#= image_tag following.get_profile_image, size:'50x50' %></td>-->
+    <!--<td><%#= following.name%></td>-->
+    <!--<td>フォロー数: <%#= following.followings.count%></td>-->
+    <!--<td>フォロワー数: <%#= following.followers.count%></td>-->
+    <!--<td><%#= link_to "show", user_path(following.id)%>-->
+    <!--</td>-->
+  <!--</tr>-->
+    <%# end %>
+  <!--</tbody>-->
+<!--</table>-->
 <% else %>
 <p>ユーザーはいません</p>
 <% end %>
