--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,11 +10,12 @@
   </head>
   <body>
     <%= render 'layouts/header' %>
+    <%= render 'searches/searching' %>
       <main>
         <p id="notice"><%= notice %></p>
         <%= yield %>
       </main>
     <%= render 'layouts/footer' %>
-    
+
   </body>
 </html>
