--- a/app/views/books/_index.html.erb
+++ b/app/views/books/_index.html.erb
@@ -16,20 +16,12 @@
         </td>
         <td><%= link_to book.title,book %></td>
         <td><%= book.body %></td>
-        <td><% if book.favorited_by?(current_user) %>
-        <%= link_to book_favorites_path(book),method: :delete,class:"heart-red" do %>
-        ♥<%= book.favorites.count %><% end %>
-        </p>
-        <% else %>
-        <%= link_to book_favorites_path(book), method: :post do%>
-        <p>
-        ♡<%= book.favorites.count %><% end %>
-        </p>
-        <% end %>
-        </td>
         <td>
           コメント数: <%= book.book_comments.count %>
         </td>
+        <td id ="favorite_buttons_<%= book.id %>">
+          <%= render "favorites/favorite_btn", book: book%>
+          </td>
       </tr>
     <% end %>
   </tbody>
