--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,5 +1,5 @@
- <%= render 'layouts/errors', obj: @book_comment %>
- 
+ <%= render 'layouts/errors', obj: @comment %>
+
 <div class='container'>
   <div class='row'>
     <div class='col-md-3'>
@@ -19,51 +19,27 @@
           </td>
           <td><%= link_to @book.title, @book %></td>
           <td><%= @book.body %></td>
-          
+          <td>コメント数: <%= @book.book_comments.count %></td>
+
+          <td id = "favorite_buttons_<%= @book.id %>"><%= render"favorites/favorite_btn", book: @book %></td>
+
           <% if @book.user == current_user %>
             <td><%= link_to 'Edit', edit_book_path(@book), class: "btn btn-sm btn-success" %></td>
             <td><%= link_to 'Destroy', @book, method: :delete, data: { confirm: '本当に消しますか？' }, class: "btn btn-sm btn-danger"%></td>
           <% end %>
-            <td><% if @book.favorited_by?(current_user) %>
-            <%= link_to book_favorites_path(@book),method: :delete,class:"heart-red" do %>
-            ♥<%= @book.favorites.count %><% end %>
-             </p>
-            <% else %>
-            <%= link_to book_favorites_path(@book), method: :post do%>
-             <p>
-            ♡<%= @book.favorites.count %><% end %>
-            </p>
-            <% end %>
-            </td>
-            
-            <td>コメント数: <%= @book.book_comments.count %>
-            </td>
-            
         </tr>
       </table>
-      
-      <div>
-        <% @book.book_comments.each do |book_comment|%>
-        <%= image_tag book_comment.user.get_profile_image, size:'50x50'%>
-        <%= book_comment.comment %>
-        <% if book_comment.user == current_user %>
-        <%= link_to "Delete", book_book_comment_path(book_comment.book,book_comment), method: :delete, class: "btn btn-sm btn-danger" %>
-        <% end %>
-        <p>
-          <%= link_to user_path(book_comment.user_id) do %>
-          <%= book_comment.user.name %>
-          <% end %>
-        </p>
-        <% end %>
+
+      <div id = "book_comments_<%= bookComment.id %>">
+      <%= render "book_comments/index", book: @book %>
       </div>
-      
-      <div>
-        <%= form_with model:[@book,@book_comment] do |f|%>
-        <%= f.text_area :comment,rows:'5' %>
-        <%= f.submit "送信"%>
-      　<% end %>
-      </div>
-    
+
+      <%= form_with model:[@book,@comment], local: false do |f|%>
+      <%= f.text_area :comment,rows:'5', id:"comment_area", placeholder: "コメントをここに", class:"w-100" %>
+      <%= f.submit "送信する", class: "btn btn-success mt-20 pull-right float-right"%>
+      <% end %>
+      <%#= render "book_comments/form", book: @book, book_comment: @comment %>
+
     </div>
   </div>
 </div>
