--- a/app/views/book_comments/_index.html.erb
+++ b/app/views/book_comments/_index.html.erb
@@ -1,4 +1,3 @@
-<table>
   <tbody>
    <% book.book_comments.each do |book_comment|%>
     <tr>
@@ -11,11 +10,10 @@
 
       <td><%= book_comment.comment %></td>
       <td>
-        <% if book_comment.user == current_user %>
-        <%= link_to "Destroy", book_book_comment_path(book,book_comment), method: :delete, remote: true, class: "btn btn-sm btn-danger float-right" %>
+        <% if  current_user == book_comment.user %>
+        <%= link_to "Destroy", book_book_comment_path(book_comment.book_id, book_comment.id), method: :delete, remote: true, class: "btn btn-sm btn-danger float-right" %>
         <% end %>
       </td>
       </tr>
    <% end %>
   </tbody>
-  </table>
