--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,4 +1,4 @@
- <%= render 'layouts/errors', obj: @comment %>
+ <%= render 'layouts/errors', obj: @book_comment %>
 
 <div class='container'>
   <div class='row'>
@@ -11,7 +11,7 @@
     <div class='col-md-8 offset-md-1'>
   		<h2>Book detail</h2>
   		<table class='table'>
-  		  <tr>
+  		  <tr id="book_<%= @book.id %>">
           <td><%= link_to(@book.user) do %>
             <%= image_tag @book.user.get_profile_image, size:"100x100" %><br>
             <%= @book.user.name %>
@@ -19,9 +19,9 @@
           </td>
           <td><%= link_to @book.title, @book %></td>
           <td><%= @book.body %></td>
-          <td>コメント数: <%= @book.book_comments.count %></td>
+          <td class="comments-count">コメント数: <%= @book.book_comments.count %></td>
 
-          <td id = "favorite_buttons_<%= @book.id %>"><%= render"favorites/favorite_btn", book: @book %></td>
+          <td class="favorite-btn"><%= render"favorites/favorite_btn", book: @book %></td>
 
           <% if @book.user == current_user %>
             <td><%= link_to 'Edit', edit_book_path(@book), class: "btn btn-sm btn-success" %></td>
@@ -30,12 +30,13 @@
         </tr>
       </table>
 
-      <div id = "book_comments_<%= bookComment.id %>">
+      <table id = "book_comments">
       <%= render "book_comments/index", book: @book %>
-      </div>
+      </table>
 
-      <%= form_with model:[@book,@comment], local: false do |f|%>
-      <%= f.text_area :comment,rows:'5', id:"comment_area", placeholder: "コメントをここに", class:"w-100" %>
+      <%= form_with model:[@book,@book_comment], local: false do |f|%>
+      <%= f.text_area :comment,rows:'5', placeholder: "コメントをここに", class:"w-100" %>
+      <!--非同期通信：form_withのinput要素（入力エリア）には自動でモデル名_カラム名というidが付与されるので別途指定不要-->
       <%= f.submit "送信する", class: "btn btn-success mt-20 pull-right float-right"%>
       <% end %>
       <%#= render "book_comments/form", book: @book, book_comment: @comment %>
