--- a/app/views/books/_index.html.erb
+++ b/app/views/books/_index.html.erb
@@ -16,12 +16,14 @@
         </td>
         <td><%= link_to book.title,book %></td>
         <td><%= book.body %></td>
-        <td class = "comments-count">
-          コメント数: <%= book.book_comments.count %>
-        </td>
         <td class = "favorite-btn">
           <%= render "favorites/favorite_btn", book: book%>
-          </td>
+        </td>
+         <td class = "comments-count">
+          コメント数: <%= book.book_comments.count %>
+        </td>
+        <td>   閲覧数：<%= book.read_counts.count %></td>
+        
       </tr>
     <% end %>
   </tbody>
