--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -19,10 +19,9 @@
           </td>
           <td><%= link_to @book.title, @book %></td>
           <td><%= @book.body %></td>
-          <td class="comments-count">コメント数: <%= @book.book_comments.count %></td>
-
           <td class="favorite-btn"><%= render"favorites/favorite_btn", book: @book %></td>
-
+          <td class="comments-count">コメント数: <%= @book.book_comments.count %></td>
+          <td>閲覧数：<%= @book.read_counts.count %></td>
           <% if @book.user == current_user %>
             <td><%= link_to 'Edit', edit_book_path(@book), class: "btn btn-sm btn-success" %></td>
             <td><%= link_to 'Destroy', @book, method: :delete, data: { confirm: '本当に消しますか？' }, class: "btn btn-sm btn-danger"%></td>
