--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -9,6 +9,61 @@
     <div class='col-md-8 offset-md-1'>
       <h2>Books</h2>
       <%= render 'books/index',books: @user.books %>
+    
+      <h4>投稿数の前日比・前週比</h4>
+    <table class = 'table table-hover table-inverse table-bordered'>
+    <thead>
+      <row>
+      <th>今日の投稿数</th>
+      <th>前日の投稿数</th>
+      <th>前日比</th>
+      </row>
+    </thead>
+    <tbody>
+      <row>
+       <td><%= @today_book.count %></td>    
+       <td><%= @yesterday_book.count %></td>
+       <td>
+         <% if @yesterday_book.count == 0%>
+        　前日の投稿はありません
+         <% else %>
+         <% @the_day_before =   @today_book.count / @yesterday_book.count.to_f  %>
+         　<%= (@the_day_before * 100).round %>%
+         　<!--to_fメソッドで小数点まで表示-->
+         <% end %>
+       </td>
+      </row>
+    </tbody>
+    </table>
+    
+    <table class = 'table table-hover table-inverse table-bordered'>
+    <thead>
+      <row>
+      <th>今週の投稿数</th>
+      <th>前週の投稿数</th>
+      <th>前週比</th>
+      </row>
+    </thead>
+    <tbody>
+      <row>
+       <td><%= @this_week_book.count %></td>    
+       <td><%= @last_week_book.count %></td>
+       <td>
+          <% if @last_week_book.count == 0%>
+        　先週の投稿はありません
+         <% else %>
+         <% @the_week_before =   @this_week_book.count / @last_week_book.count.to_f  %>
+         　<%= (@the_week_before * 100).round %>%
+         　<!--to_fメソッドで小数点まで表示-->
+         <% end %>
+       </td>
+      </row>
+    </tbody>
+    </table>
     </div>
+    
+    
+    
+    
   </div>
 </div>
