--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -11,6 +11,34 @@
     <div class='col-md-8 offset-md-1'>
       <h2>Books</h2>
       <%= render 'index', books: @books%>
+      <h4>7日間分の投稿数</h4>
+    <table class = 'table table-hover table-inverse table-bordered'>
+    <thead>
+      <row>
+      <th>6日前</th>
+      <th>5日前</th>
+      <th>4日前</th>
+      <th>3日前</th>
+      <th>2日前</th>
+      <th>1日前</th>
+      <th>今日</th>
+      </row>
+    </thead>
+    <tbody>
+      <row>
+       <td><%= @book_count.created_days_ago(6).count %></td>
+       <td><%= @book_count.created_days_ago(5).count %></td>
+       <td><%= @book_count.created_days_ago(4).count %></td>
+       <td><%= @book_count.created_days_ago(3).count %></td>
+       <td><%= @book_count.created_days_ago(2).count %></td>
+       <td><%= @book_count.created_days_ago(1).count %></td> 
+       <td><%= @book_count.created_today.count %></td>
+      </row>
+    </tbody>
+    </table>
+
     </div>
+
+
   </div>
 </div>
