[Add]星レビュー

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -8,109 +8,9 @@
     </div>
     <div class='col-md-8 offset-md-1'>
       <h2>Books</h2>
+      
       <%= render 'books/index',books: @user.books %>
-
-      <h4>投稿数の前日比・前週比</h4>
-    <table class = 'table table-hover table-inverse table-bordered'>
-    <thead>
-      <row>
-      <th>今日の投稿数</th>
-      <th>前日の投稿数</th>
-      <th>前日比</th>
-      </row>
-    </thead>
-    <tbody>
-      <row>
-       <td><%= @today_book.count %></td>
-       <td><%= @yesterday_book.count %></td>
-       <td>
-         <% if @yesterday_book.count == 0%>
-          前日の投稿はありません
-         <% else %>
-         <% @the_day_before =   @today_book.count / @yesterday_book.count.to_f  %>
-          <%= (@the_day_before * 100).round %>%
-          <!--to_fメソッドで小数点まで表示-->
-         <% end %>
-       </td>
-      </row>
-    </tbody>
-    </table>
-
-    <table class = 'table table-hover table-inverse table-bordered'>
-    <thead>
-      <row>
-      <th>今週の投稿数</th>
-      <th>前週の投稿数</th>
-      <th>前週比</th>
-      </row>
-    </thead>
-    <tbody>
-      <row>
-       <td><%= @this_week_book.count %></td>
-       <td><%= @last_week_book.count %></td>
-       <td>
-          <% if @last_week_book.count == 0%>
-          先週の投稿はありません
-         <% else %>
-         <% @the_week_before =   @this_week_book.count / @last_week_book.count.to_f  %>
-         <%= (@the_week_before * 100).round %>%
-          <!--to_fメソッドで小数点まで表示-->
-         <% end %>
-       </td>
-      </row>
-    </tbody>
-    </table>
-
-    <p class= "text-center">7日間の投稿数の比較</p>
-    <canvas id = "mychart"></canvas>
-
-    <script>
-    var ctx = document.getElementById('mychart');
-    var data = {
-    labels: ["6日前","5日前","4日前","3日前","2日前","1日前","今日"],
-    datasets:[{
-        label:'投稿した本の数',
-        data: <%= @books.this_week_count %>,
-        borderColor: 'rgba(255, 100, 100, 1)',
-        // 曲線具合。1が直線。
-        lineTension: 0.3,
-        // グラフ線の下の塗りつぶし。true あり false なし
-        fill: true
-        }]
-          };
-
-    var options = {
-        scales: {
-            y:{
-                max: 10,
-                beginAtZero: true,
-                stepSize:1
-            }
-        }
-    };
-
-    $(document).on('turbolinks:load', function() {
-    var myChart = new Chart(ctx,{
-    type:'line',
-    data: data,
-    options: options
-   });
-   });
-
-</script>
-  <div class="d-flex justify-content-center mt-3">
-  <%= form_with  url:user_search_path(@user),local:false, method: :get do |f| %>
-  <%= f.date_field :created_at %>
-  <%= f.submit "検索"%>
-  <% end %>
-  </div>
-  
- <div id="search_result">
-   <% if @search_book.present? %>
-   <%= render 'search', search_book: @search_book %>
-   <% end %>
- </div>
-
-
+      <%= render 'search', user: @user %>
+      <%= render 'book_info'%>
   </div>
 </div>
