--- a/app/views/books/_form.html.erb
+++ b/app/views/books/_form.html.erb
@@ -7,7 +7,25 @@
     <%= f.label "Opinion" %>
     <%= f.text_area :body, class: 'form-control book_body' %>
   </div>
+
+  <div id="post_raty" class= mb-3></div>
+  <script>
+  // scriptファイルをどのidの部分に配置するかを指定
+  let elem = document.querySelector('#post_raty');
+  let opt = {
+    //星画像の指定などのオプションをここに記述,
+    size: 36,
+    starOff:  '<%= asset_path('star-off.png') %>',
+    // starharf : '<%= asset_path('star-half.png') %>',
+    starOn : '<%= asset_path('star-on.png') %>',
+ 　　scoreName:'book[score]'
+   };
+  raty(elem,opt);
+</script>
+
   <div class="form-group">
     <%= f.submit  'Create Book',class: 'btn btn-success' %>
   </div>
+
 <% end %>
+
