--- a/app/views/users/_search.html.erb
+++ b/app/views/users/_search.html.erb
@@ -1,14 +1,12 @@
-<p class="text-center mt-3">検索結果</p>
-<table class='table table-bordered'>
-    <thead>
-      <tr>
-        <th>投稿数</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <td><%= @search_book %></td>
-      </tr>
-    </tbody>
-  </table>
+  <div class="d-flex justify-content-center my-3">
+  <%= form_with  url:user_search_path(user),local:false, method: :get do |f| %>
+  <%= f.date_field :created_at ,class: "form-control"%>
+  <div class="col-auto my-1">
+  <%= f.submit "検索",class: "btn btn-primary"%>
+   </div>
+  <% end %>
   </div>
+
+ <div id="search_result">
+   <!--idだけ指定して、検索結果は丸ごとjsファイル-->
+ </div>
