--- a/app/views/users/search.js.erb
+++ b/app/views/users/search.js.erb
@@ -1,1 +1,8 @@
-$("#search_result").html("<%= j(render 'search', search_book: @search_book) %>");
+$("#search_result").html(`
+<div class="my-3">
+<h4>検索結果</h4>
+<div class="card">
+<div class="card-header">投稿数</div>
+<div class="card-body"><%= j(@search_book) %></div>
+</div>
+`)
