--- a/app/views/books/_index.html.erb
+++ b/app/views/books/_index.html.erb
@@ -5,6 +5,7 @@
       <th>Title</th>
       <th>Opinion</th>
       <th colspan="3"></th>
+      <th colspan="3"></th>
     </tr>
   </thead>
   <tbody>
@@ -22,7 +23,8 @@
          <td class = "comments-count">
           コメント数: <%= book.book_comments.count %>
         </td>
-        <td>   閲覧数：<%= book.read_counts.count %></td>
+        <td>閲覧数：<%= book.read_counts.count %></td>
+        <td><%= render "static_rate", book: book %></td>
 
       </tr>
     <% end %>
