--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -21,30 +21,12 @@
           <td><%= @book.body %></td>
           <td class="favorite-btn"><%= render"favorites/favorite_btn", book: @book %></td>
           <td class="comments-count">コメント数: <%= @book.book_comments.count %></td>
+          <td><%= render "static_rate", book: @book %></td>
           <td>閲覧数：<%= @book.read_counts.count %></td>
           <% if @book.user == current_user %>
             <td><%= link_to 'Edit', edit_book_path(@book), class: "btn btn-sm btn-success" %></td>
             <td><%= link_to 'Destroy', @book, method: :delete, data: { confirm: '本当に消しますか？' }, class: "btn btn-sm btn-danger"%></td>
           <% end %>
-            <td>
-              <div id="star-rate<%= @book.id %>"></div>
-              <script>
-              let elm = document.querySelector('#star-rate<%= @book.id %>');
-              let ot = {
-                 size      : 36,
-                 starOff   : '<%= asset_path('star-off.png') %>',
-                 // starharf : '<%#= asset_path('star-half.png') %>',
-                 starOn    : '<%= asset_path('star-on.png') %>',
-                 readOnly: true,
-                 score: '<%= @book.score %>'
-                };
-              $(document).on('turbolinks:load',function(){
-                raty(elm,ot);
-              });
-              </script>
-
-            </td>
-
         </tr>
       </table>
 
