--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,4 +1,8 @@
 <div class="container">
+  <p>男性の学生数<br><span class="count-up">2540</span>人</p>
+  <p>女性の学生数<br><span class="count-up">2300</span>人</p>
+  <p>教員数<br><span class="count-up">300</span>人</p>
+  
   <div class="row">
     <div class='mx-auto col-11 col-sm-10 col-lg-8 col-xl-6'>
       <h1>welcome to <i class="fas fa-book"></i><strong>Bookers</strong>  !!</h1>
