--- a/app/views/books/_index.html.erb
+++ b/app/views/books/_index.html.erb
@@ -3,6 +3,7 @@
     <tr>
       <th></th>
       <th>Title</th>
+      <th>Tag</th>
       <th>Opinion</th>
       <th colspan="3"></th>
       <th colspan="3"></th>
@@ -16,6 +17,7 @@
           <% end %>
         </td>
         <td><%= link_to book.title,book %></td>
+        <td><%= book.tags.map(&:name).join(',') %></td>
         <td><%= book.body %></td>
         <td class = "favorite-btn">
           <%= render "favorites/favorite_btn", book: book%>
@@ -24,7 +26,7 @@
           コメント数: <%= book.book_comments.count %>
         </td>
         <td>閲覧数：<%= book.read_counts.count %></td>
-        <td><%= render "static_rate", book: book %></td>
+        <td><%= render "books/static_rate", book: book %></td>
 
       </tr>
     <% end %>
